# Learn-Fast-API

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  mydatabase.db  pyproject.toml  pytest.ini  requirements.txt  start.sh  test.db
alembic/: env.py
alembic/versions/: 2406a6d9bf01_add_user_model.py  638da3b70e3d_add_user_model.py  7e7ae80fbf3c_initial_migration_for_issue_6.py  9b88039b4e98_merge_heads.py  a79abef1c43c_merge_heads.py  ba06be85f682_add_user_model.py  c8aecc428917_add_user_model.py  d7f7241a292a_add_tasks_table.py  fb87f0c5bde5_add_user_model.py  fdbf9e588929_add_user_model.py
app/: __init__.py  config.py  main.py  migration_settings.py  models.py
app/auth/: login.py
app/core/: config.py  database.py  security.py  settings.py
app/db/: __init__.py  base.py  database.py  databse.py  init_data.py  models.py  session.py
app/db/models/: user.py
app/models/: __init__.py  models.py  user.py  users.py
app/routes/: auth.py  login.py  register.py  task.py  todo.py  user.py  user_routes.py  users.py
app/schemas/: login.py  register.py  schemas.py  tasks.py  user.py  users.py
app/services/: auth.py  auth_service.py  security.py  user.py  user_service.py
db/: database.py
fastapi_project/: main.py
migration/: env.py
migration/versions/: 45a11ad3f72c_added_todo_table.py  4ce22003b8d9_add_user.py  577fb1c8febe_add_user.py  b9d065715203_add_user.py  dce2adab9f01_add_user.py
migrations/: env.py
migrations/versions/: a17b13f9d0df_create_users_table.py  aa2719255c35_add_user_model.py  ccd7f2ee367e_add_users_table.py
tests/: conftest.py  test_auth.py  test_task.py
