[tool.poetry]
name = "learn-fast-api"
version = "0.1.0"
description = ""
authors = [
    { name = "Megha Muralidharan", email = "megha710sw@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi (>=0.121.1,<0.122.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "cryptography (>=46.0.3,<47.0.0)",
    "bcrypt (==4.0.1)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "alembic (>=1.17.1,<2.0.0)",
    "pytest (>=9.0.0,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]

[tool.poetry]
package-mode = false
authors = ["Megha Muralidharan <megha710sw@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.121.1"
uvicorn = "^0.38.0"
sqlalchemy = { version = "^2.0.44", extras = ["asyncio"] }
asyncpg = "^0.30.0"
python-jose = { version = "^3.5.0", extras = ["cryptography"] }
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
pydantic-settings = "^2.12.0"
psycopg2-binary = "^2.9.11"
cryptography = "^46.0.3"
aiosqlite = "^0.21.0"

[tool.poetry.group.dev.dependencies]
alembic = "^1.17.1"
pytest = "^9.0.0"
pytest-asyncio = "^1.3.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
