[tool.poetry]
name = "learn-fast-api"
version = "0.1.0"
description = ""
authors = ["Megha Muralidharan <megha710sw@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

# Core Framework and Database
fastapi = "^0.121.1"
uvicorn = "^0.38.0"
sqlalchemy = { version = "^2.0.44", extras = ["asyncio"] }
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.11"
aiosqlite = "^0.21.0"

# Authentication and Hashing
python-jose = { version = "^3.5.0", extras = ["cryptography"] }
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
cryptography = "^46.0.3"
bcrypt = "^4.0.1"

# Settings and Configuration
pydantic-settings = "^2.12.0"

[tool.poetry.group.dev.dependencies]
alembic = "^1.17.1"
pytest = "^9.0.0"
pytest-asyncio = "^1.3.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
